restylize meetup section

--- a/index.html
+++ b/index.html
@@ -57,13 +57,23 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading text-white">Prochain Meetup</h2>
           <hr class="light my-4">
-          <div id="program">
+          <div id="details">
             <p class="mb-4">
-              <strong>Au programme :</strong>
-              <ul>
-                <li>Les usages concrets de la blockchain</li>
-                <li>La proof-of-stake</li>
-              </ul>
+              <div class="row">
+                <span class="icon col-md-1 fa fa-1x fa-calendar-alt"></span>
+                <span class="col-md-11">17/05/2018</span>
+              </div>
+              <div class="row">
+                <span class="icon col-md-1 fas fa-1x fa-map-marker-alt"></span>
+                <span class="col-md-11">Epitech Nantes - 18 rue Flandres Dunkerque</span>
+              </div>
+              <div id="program">
+                <h4>Au programme :</h4>
+                <ul>
+                  <li>Les usages concrets de la blockchain</li>
+                  <li>La proof-of-stake</li>
+                </ul>
+              </div>
             </p>
           </div>
           <a class="btn btn-light btn-xl" href="http://meetu.ps/e/FdqpQ/yGZJB/f" target="_blank">Je m'inscris</a>
