fix responsive details section

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
           <div id="details">
             <p class="mb-4">
               <div class="row">
-                <span class="icon col-md-1 fa fa-1x fa-calendar-alt"></span>
-                <span class="col-md-11">17/05/2018</span>
+                <span class="icon col-1 fa fa-lg fa-calendar-alt"></span>
+                <span class="col-11">17/05/2018</span>
               </div>
               <div class="row">
-                <span class="icon col-md-1 fas fa-1x fa-map-marker-alt"></span>
-                <span class="col-md-11">Epitech Nantes - 18 rue Flandres Dunkerque</span>
+                <span class="icon col-1 fas fa-lg fa-map-marker-alt"></span>
+                <span class="col-11">
+                  Epitech Nantes
+                  <br/> 18 rue Flandres Dunkerque</span>
               </div>
               <div id="program">
                 <h4>Au programme :</h4>
