--- a/index.html
+++ b/index.html
@@ -45,11 +45,57 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#meetup">En savoir plus</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
         </div>
       </div>
     </div>
   </header>
+
+
+  <section id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2>Notre vision</h2>
+          <hr class="my-4">
+        </div>
+      </div>
+      <div class="row">
+        Notre association a pour objet de faire découvrir la thématique de la blockchain et des Distributed Ledger Technologies au
+        grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique Nantaise
+        sur le sujet.
+      </div>
+      <div class="row">
+        A ce titre, nous organisons des meetups Blockchain et Société composés de deux tracks principales :
+      </div>
+      <div class="row  text-center">
+
+        <div class="col-lg-6">
+          <span class="rounded fas fa-link fa-5x"></span>
+          <h3>Technologies</h3>
+          <p>
+            Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois vulgarisées, parfois techniques
+            et souvent les deux à la fois !
+            <br/> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les inombrables possibilités
+            qu'offrent les technologies décentralisées.
+          </p>
+        </div>
+
+        <div class="col-lg-6">
+          <span class="fab fa-bitcoin fa-5x"></span>
+          <h3>Cryptomonnaies</h3>
+          <p>
+            Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
+            techniques de trading.
+            <br/> Nous avons également mis en place un portefeuille d'investissement commun 100% virtuel, que nous gérons de semaine
+            en semaine.
+            <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
 
   <section class="bg-primary" id="meetup">
     <div class="container">
@@ -84,6 +130,7 @@
       </div>
     </div>
   </section>
+
 
   <section id="networks">
     <div class="container">
