fix some gramatical mistakes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>
               Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois vulgarisées, parfois techniques
               et souvent les deux à la fois !
-              <br/> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les inombrables possibilités
+              <br/> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les innombrables possibilités
               qu'offrent les technologies décentralisées.
             </p>
           </div>
@@ -96,7 +96,7 @@
             <p>
               Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
               techniques de trading.
-              <br/> Nous avons également mis en place un portefeuille d'investissement commun 100% virtuel, que nous gérons de
+              <br/> Nous avons également mis en place un portefeuille d'investissement commun 100 % virtuel, que nous gérons de
               semaine en semaine.
               <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
             </p>
