--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/creative.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 
 </head>
 
@@ -45,11 +45,66 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#meetup">En savoir plus</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">En savoir plus</a>
         </div>
       </div>
     </div>
   </header>
+
+
+  <section id="about">
+    <div class="container my-auto">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2>Notre vision</h2>
+          <hr class="my-4">
+        </div>
+      </div>
+      <div class="row">
+        <p>
+          Notre association a pour objet de faire découvrir la thématique de la blockchain et des Distributed Ledger Technologies au
+          grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique Nantaise
+          sur le sujet.
+        </p>
+        <p>
+          A ce titre, nous organisons des meetups Blockchain et Société composés de deux tracks principales :
+        </p>
+      </div>
+      <div class="row text-center tracks">
+        <div class="col-lg-6">
+          <div class="track shadow-lg p-3 bg-white rounded">
+            <span class="fa-stack fa-2x">
+              <i class="fas fa-circle fa-stack-2x"></i>
+              <i class="fas fa-link fa-stack-1x fa-inverse"></i>
+            </span>
+            <h3>Technologies</h3>
+            <hr>
+            <p>
+              Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois vulgarisées, parfois techniques
+              et souvent les deux à la fois !
+              <br/> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les innombrables possibilités
+              qu'offrent les technologies décentralisées.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-lg-6 ">
+          <div class="track shadow-lg p-3 bg-white rounded">
+            <span class="fab fa-bitcoin fa-4x"></span>
+            <h3>Cryptomonnaies</h3>
+            <hr>
+            <p>
+              Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
+              techniques de trading.
+              <br/> Nous avons également mis en place un portefeuille d'investissement commun 100 % virtuel, que nous gérons de
+              semaine en semaine.
+              <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="bg-primary" id="meetup">
     <div class="container">
@@ -84,6 +139,7 @@
       </div>
     </div>
   </section>
+
 
   <section id="networks">
     <div class="container">
@@ -169,7 +225,7 @@
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/creative.js"></script>
+  <script src="js/main.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
