--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
   <!-- Custom styles for this template -->
   <link href="css/main.css" rel="stylesheet">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118758486-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-118758486-1');
+  </script>
+
+
+
 </head>
 
 <body id="page-top">
