add team section

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
   </section>
 
-  <section class="bg-primary" id="meetup">
+  <!--section class="bg-primary" id="meetup">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -158,11 +158,86 @@
           </div>
           <a class="btn btn-light btn-xl" href="http://meetu.ps/e/FdqpQ/yGZJB/f" target="_blank">Je m'inscris</a>
         </div>
-        <!--div id="map" class="col-lg-4"></div-->
+      </div>
+    </div>
+  </section-->
+
+  <section class="bg-primary" id="team">
+    <div class="container">
+      <div class="row section-head">
+        <div class="col text-center">
+          <h2 class="text-white">Les membres de l'association</h2>
+          <hr class="light my-4">
+        </div>
+      </div>
+
+      <div class="row team-list">
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/dle.jpg">
+          <div class="card-body">
+            <p class="card-text">Damien LECAN</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/gni.jpg">
+          <div class="card-body">
+            <p class="card-text">Guillaume NICOLAS</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/bfo.jpg">
+          <div class="card-body">
+            <p class="card-text">Benjamin FONTAINE</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/kbi.jpg">
+          <div class="card-body">
+            <p class="card-text">Kévin BIGER</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/llo.jpg">
+          <div class="card-body">
+            <p class="card-text">Laurent LOURENÇO</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/jhe.jpg">
+          <div class="card-body">
+            <p class="card-text">Jérôme HEDAN</p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/ala.jpg">
+          <div class="card-body">
+            <p class="card-text">Adrien LASSELLE</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/nla.jpg">
+          <div class="card-body">
+            <p class="card-text">Nicolas LAUNAY</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/rle.jpg">
+          <div class="card-body">
+            <p class="card-text">Rachel LE TROTTER</p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
-
 
   <section id="networks">
     <div class="container">
@@ -257,22 +332,6 @@
       console.log('callback - particles.js config loaded');
     });
   </script>
-
-  <!--script>
-    function initMap() {
-      var epitechNantes = { lat: 47.211412, lng: -1.565924 };
-      var map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 4,
-        center: epitechNantes
-      });
-      var marker = new google.maps.Marker({
-        position: epitechNantes,
-        map: map
-      });
-    }
-  </script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDvPbWTAoZgOsr4GUYU8D1-g8gu-wxVXs&callback=initMap">
-  </script-->
 
 </body>
 
