add partner section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
     </div>
   </header>
 
-
   <section id="about">
     <div class="container my-auto">
       <div class="row">
@@ -235,6 +234,44 @@
           </div>
         </div>
 
+      </div>
+    </div>
+  </section>
+
+  <section class="bg-dark" id="partners">
+    <div class="container">
+      <div class="row section-head">
+        <div class="col text-center">
+          <h2 class="text-white">Nos partenaires</h2>
+          <hr class="light my-4">
+        </div>
+      </div>
+
+      <div class="row partner-list">
+
+        <div class="card">
+          <a href="http://www.epitech.eu/nantes/ecole-informatique-nantes.aspx" target="_blank">
+            <img class="card-img-top" src="./img/partner/epitech.png">
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="https://nantes.ynov.com" target="_blank">
+            <img class="card-img-top" src="./img/partner/ynov.png">
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="https://www.zenika.com" target="_blank">
+            <img class="card-img-top" src="./img/partner/zenika.png">
+          </a>
+        </div>
+
+        <div class="card">
+          <a href="https://www.spacelephant.org" target="_blank">
+            <img class="card-img-top" src="./img/partner/spacelephant.png">
+          </a>
+        </div>
       </div>
     </div>
   </section>
