--- a/index.html
+++ b/index.html
@@ -249,27 +249,39 @@
 
       <div class="row partner-list">
 
-        <div class="card">
+        <div class="card epitech">
           <a href="http://www.epitech.eu/nantes/ecole-informatique-nantes.aspx" target="_blank">
             <img class="card-img-top" src="./img/partner/epitech.png">
+            <div class="overlay rounded-circle">
+              <p class="text">Epitech Nantes</p>
+            </div>
           </a>
         </div>
 
-        <div class="card">
+        <div class="card ynov">
           <a href="https://nantes.ynov.com" target="_blank">
             <img class="card-img-top" src="./img/partner/ynov.png">
+            <div class="overlay rounded-circle">
+              <p class="text">Ynov Nantes</p>
+            </div>
           </a>
         </div>
 
-        <div class="card">
+        <div class="card zenika">
           <a href="https://www.zenika.com" target="_blank">
             <img class="card-img-top" src="./img/partner/zenika.png">
+            <div class="overlay rounded-circle">
+              <p class="text">Zenika Nantes</p>
+            </div>
           </a>
         </div>
 
-        <div class="card">
+        <div class="card spacelephant">
           <a href="https://www.spacelephant.org" target="_blank">
             <img class="card-img-top" src="./img/partner/spacelephant.png">
+            <div class="overlay rounded-circle">
+              <p class="text">Space Elephant</p>
+            </div>
           </a>
         </div>
       </div>
