add jules, pierre and sebastien

--- a/index.html
+++ b/index.html
@@ -209,6 +209,27 @@
         </div>
 
         <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/jle.png">
+          <div class="card-body">
+            <p class="card-text">Jules LEPOIVRE</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/anonymous.png">
+          <div class="card-body">
+            <p class="card-text">Pierre REICHERT</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/anonymous.png">
+          <div class="card-body">
+            <p class="card-text">Sebastien VINCENT</p>
+          </div>
+        </div>
+
+        <div class="card">
           <img class="card-img-top rounded-circle" src="./img/team/jhe.jpg">
           <div class="card-body">
             <p class="card-text">Jérôme HEDAN</p>
