hide next Meetup section if there is no planed Meetup

--- a/index.html
+++ b/index.html
@@ -133,14 +133,7 @@
     </div>
   </section>
 
-  <section class="bg-dark" id="meetup">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-white">Prochain Meetup à venir</h2>
-        </div>
-      </div>
-    </div>
+  <section class="bg-dark d-none" id="meetup">
   </section>
 
   <section class="bg-primary" id="team">
