--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
         </div>
 
         <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/ale.jpg">
+          <div class="card-body">
+            <p class="card-text">Alice LE BARS</p>
+          </div>
+        </div>
+
+        <div class="card">
           <img class="card-img-top rounded-circle" src="./img/team/llo.jpg">
           <div class="card-body">
             <p class="card-text">Laurent LOURENÇO</p>
