--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
 
   <footer class="container-fluid">
     <div class=" mx-auto text-center">
-      Made with
+      Homemade with
       <span class="fa fa-heart"></span>
-      by Guillaume Nicolas
+      by ourselves
     </div>
   </footer>
 
