feat: add bgo in partner section

--- a/index.html
+++ b/index.html
@@ -287,6 +287,14 @@
             </div>
           </a>
         </div>
+        <div class="card bgo">
+          <a href="https://www.blockchaingrandouest.org" target="_blank">
+            <img class="card-img-top" src="./img/partner/bgo.png">
+            <div class="overlay rounded-circle">
+              <p class="text">Blockchain Grand Ouest</p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </section>
