feat: improve vision section

--- a/index.html
+++ b/index.html
@@ -99,14 +99,13 @@
       </div>
       <div class="row text-center tracks">
         <div class="col-lg-6">
-          <div class="track shadow-lg p-3 bg-white rounded">
-            <span class="fa-stack fa-2x">
-              <i class="fas fa-circle fa-stack-2x"></i>
-              <i class="fas fa-link fa-stack-1x fa-inverse"></i>
-            </span>
-            <h3>Technologies</h3>
+          <div class="track tech shadow-lg p-3 bg-white rounded">
+            <div class="head">
+              <i class="fas fa-link"></i>
+              <h3>Technologies</h3>
+            </div>
             <hr>
-            <p>
+            <p class="body">
               Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois vulgarisées, parfois techniques
               et souvent les deux à la fois !
               <br/> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les innombrables possibilités
@@ -116,11 +115,13 @@
         </div>
 
         <div class="col-lg-6 ">
-          <div class="track shadow-lg p-3 bg-white rounded">
-            <span class="fab fa-bitcoin fa-4x"></span>
-            <h3>Cryptomonnaies</h3>
+          <div class="track crypto shadow-lg p-3 bg-white rounded">
+            <div class="head">
+              <i class="fab fa-bitcoin"></i>
+              <h3>Cryptomonnaies</h3>
+            </div>
             <hr>
-            <p>
+            <p class="body">
               Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
               techniques de trading.
               <br/> Nous avons également mis en place un portefeuille d'investissement commun 100 % virtuel, que nous gérons de
@@ -130,7 +131,6 @@
           </div>
         </div>
       </div>
-    </div>
   </section>
 
   <section class="bg-dark d-none" id="meetup">
