Feat: add email contact
Fix #17

--- a/index.html
+++ b/index.html
@@ -360,6 +360,21 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 text-center">
+          <div class="network-box mt-5 mx-auto">
+            <a href="mailto:contact@blockchainsociete.org">
+              <i class="fas fa-4x fa-envelope text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">
+                Notre email
+                <br/>
+                <strong>de contact</strong>
+              </h3>
+            </a>
+
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
