--- a/index.html
+++ b/index.html
@@ -134,6 +134,31 @@
   </section>
 
   <section class="bg-dark d-none" id="meetup">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="section-heading text-white">Prochain Meetup</h2>
+          <hr class="light my-4">
+          <div id="details">
+            <p class="mb-4">
+              <div class="row">
+                <span class="icon col-1 fa fa-lg fa-calendar-alt"></span>
+                <span class="col-11" id="next_meetup_date"></span>
+              </div>
+              <div class="row">
+                <span class="icon col-1 fas fa-lg fa-map-marker-alt"></span>
+                <span class="col-11" id="next_meetup_location"></span>
+              </div>
+              <div>
+                <h3 id="next_meetup_name"></h3>
+                <span id="next_meetup_description"></span>
+              </div>
+            </p>
+          </div>
+          <a class="btn btn-light btn-xl" id="next_meetup_url" href="" target="_blank">Je m'inscris</a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section class="bg-primary" id="team">
