--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
     </div>
   </header>
 
-
   <a href="#" class="gotop">
     <i class="fas fa-angle-double-up"></i>
   </a>
@@ -82,8 +81,9 @@
   <section id="about">
     <div class="container my-auto">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2>Notre vision</h2>
+        <div class="col-lg-12 text-center section-title">
+          <h2>
+            <i class="fas fa-link" data-id="about"></i> Notre vision</h2>
           <hr class="my-4">
         </div>
       </div>
@@ -164,8 +164,10 @@
   <section class="bg-primary" id="team">
     <div class="container">
       <div class="row section-head">
-        <div class="col text-center">
-          <h2 class="text-white">Les membres de l'association</h2>
+        <div class="col text-center section-title">
+          <h2 class="text-white">
+            <i class="fas fa-link" data-id="about"></i>
+            Les membres de l'association</h2>
           <hr class="light my-4">
         </div>
       </div>
@@ -269,8 +271,10 @@
   <section class="bg-dark" id="partners">
     <div class="container">
       <div class="row section-head">
-        <div class="col text-center">
-          <h2 class="text-white">Nos partenaires</h2>
+        <div class="col text-center section-title">
+          <h2 class="text-white">
+            <i class="fas fa-link" data-id="about"></i>
+            Nos partenaires</h2>
           <hr class="light my-4">
         </div>
       </div>
@@ -327,8 +331,10 @@
   <section id="networks">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Retrouvez nous sur</h2>
+        <div class="col-lg-12 text-center section-title">
+          <h2 class="section-heading">
+            <i class="fas fa-link" data-id="about"></i>
+            Retrouvez nous sur</h2>
           <hr class="my-4">
         </div>
       </div>
@@ -339,7 +345,7 @@
           <div class="network-box mt-5 mx-auto">
             <a href="https://join.slack.com/t/meetup-blockchain/shared_invite/enQtMzAwOTA5MDI1Njk3LWExYWYxYTNiMzlhOTA1ZWFiNjIzN2ZhMTQyZWFlMWY1NzQyMGE3OTMwMmI5YTFhMzM4Y2ZlYjcxMTU3NjBkNWE"
               target="_blank">
-              <i class="fab fa-4x fa-slack text-primary mb-3 sr-icons"></i>
+              <i class="fab fa-4x fa-slack text-primary mb-3 icons"></i>
               <h3 class="mb-3">
                 Notre channel
                 <br/>
