feat: add link to virtual wallet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous">
 
   <!-- Custom fonts for this template -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
     rel='stylesheet' type='text/css'>
@@ -123,9 +123,16 @@
             <p class="body">
               Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
               techniques de trading.
-              <br/> Nous avons également mis en place un portefeuille d'investissement commun 100 % virtuel, que nous gérons de
-              semaine en semaine.
+              <br/> Nous avons également mis en place un
+              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener" class="transparent-link">portefeuille d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
               <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
+              <br/>
+              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener">
+                <span class="fa-stack fa-2x wallet-icon" data-toggle="tooltip" title="Lien vers le portefeuille virtuel">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fas fa-wallet fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
             </p>
           </div>
         </div>
