--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-lg-12 text-center section-title">
           <h2>
-            <i class="fas fa-link" data-id="about"></i> Notre vision</h2>
+            <i class="fas fa-link"></i> Notre vision</h2>
           <hr class="my-4">
         </div>
       </div>
@@ -101,7 +101,6 @@
         <div class="col-lg-6">
           <div class="track tech shadow-lg p-3 bg-white rounded">
             <div class="head">
-              <i class="fas fa-link"></i>
               <h3>Technologies</h3>
             </div>
             <hr>
@@ -133,12 +132,19 @@
       </div>
   </section>
 
-  <section class="bg-dark d-none" id="meetup">
+  <section class="bg-dark d-none text-white" id="meetup">
     <div class="container">
+
       <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <h2 class="section-heading text-white">Prochain Meetup</h2>
-          <hr class="light my-4">
+        <div class="col-lg-12 text-center section-title">
+          <h2>
+            <i class="fas fa-link"></i> Prochain Meetup</h2>
+          <hr class="my-4">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center section-title">
           <div id="details">
             <p class="mb-4">
               <div class="row">
@@ -166,7 +172,7 @@
       <div class="row section-head">
         <div class="col text-center section-title">
           <h2 class="text-white">
-            <i class="fas fa-link" data-id="about"></i>
+            <i class="fas fa-link"></i>
             Les membres de l'association</h2>
           <hr class="light my-4">
         </div>
@@ -273,7 +279,7 @@
       <div class="row section-head">
         <div class="col text-center section-title">
           <h2 class="text-white">
-            <i class="fas fa-link" data-id="about"></i>
+            <i class="fas fa-link"></i>
             Nos partenaires</h2>
           <hr class="light my-4">
         </div>
@@ -333,7 +339,7 @@
       <div class="row">
         <div class="col-lg-12 text-center section-title">
           <h2 class="section-heading">
-            <i class="fas fa-link" data-id="about"></i>
+            <i class="fas fa-link"></i>
             Retrouvez nous sur</h2>
           <hr class="my-4">
         </div>
