--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous">
 
   <!-- Custom fonts for this template -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
     rel='stylesheet' type='text/css'>
@@ -60,7 +60,7 @@
           <h4>Bienvenue sur le site de</h4>
           <h1 class="text-uppercase">
             L'association
-            <br/>
+            <br />
             <strong>Blockchain et Société</strong>
           </h1>
           <hr>
@@ -87,8 +87,10 @@
       </div>
       <div class="row">
         <p>
-          Notre association a pour objet de faire découvrir la thématique de la blockchain et des Distributed Ledger Technologies au
-          grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique Nantaise
+          Notre association a pour objet de faire découvrir la thématique de la blockchain et des Distributed Ledger
+          Technologies au
+          grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique
+          Nantaise
           sur le sujet.
         </p>
         <p>
@@ -99,13 +101,16 @@
         <div class="col-lg-6">
           <div class="track tech shadow-lg p-3 bg-white rounded">
             <div class="head">
+              <i class="fas fa-link"></i>
               <h3>Technologies</h3>
             </div>
             <hr>
             <p class="body">
-              Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois vulgarisées, parfois techniques
+              Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois
+              vulgarisées, parfois techniques
               et souvent les deux à la fois !
-              <br/> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les innombrables possibilités
+              <br /> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les innombrables
+              possibilités
               qu'offrent les technologies décentralisées.
             </p>
           </div>
@@ -119,11 +124,13 @@
             </div>
             <hr>
             <p class="body">
-              Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
+              Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les
+              bons plans et les
               techniques de trading.
-              <br/> Nous avons également mis en place un portefeuille d'investissement commun 100 % virtuel, que nous gérons de
+              <br /> Nous avons également mis en place un portefeuille d'investissement commun 100 % virtuel, que nous
+              gérons de
               semaine en semaine.
-              <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
+              <br />Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
             </p>
           </div>
         </div>
@@ -352,7 +359,7 @@
               <i class="fab fa-4x fa-slack text-primary mb-3 icons"></i>
               <h3 class="mb-3">
                 Notre channel
-                <br/>
+                <br />
                 <strong>Slack</strong>
               </h3>
             </a>
@@ -364,7 +371,7 @@
               <i class="fab fa-4x fa-twitter text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre flux
-                <br/>
+                <br />
                 <strong>Twitter</strong>
               </h3>
             </a>
@@ -376,7 +383,7 @@
               <i class="fab fa-4x fa-github text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Nos projets
-                <br/>
+                <br />
                 <strong>Github</strong>
               </h3>
             </a>
@@ -388,7 +395,7 @@
               <i class="fab fa-4x fa-meetup text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre page
-                <br/>
+                <br />
                 <strong>Meetup</strong>
               </h3>
             </a>
@@ -402,7 +409,7 @@
               <i class="fas fa-4x fa-envelope text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre email
-                <br/>
+                <br />
                 <strong>de contact</strong>
               </h3>
             </a>
@@ -420,6 +427,10 @@
       by ourselves
     </div>
   </footer>
+
+  <!-- fontawesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
+    crossorigin="anonymous"></script>
 
   <!-- Boostrap -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
