chores: use single jsdelivr url for many dependencies + format

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <!-- Custom styles for this template -->
   <link href="css/main.css" rel="stylesheet">
 
-
   <!-- generated favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
@@ -62,7 +61,7 @@
           <h4>Bienvenue sur le site de</h4>
           <h1 class="text-uppercase">
             L'association
-            <br/>
+            <br />
             <strong>Blockchain et Société</strong>
           </h1>
           <hr>
@@ -89,8 +88,10 @@
       </div>
       <div class="row">
         <p>
-          Notre association a pour objet de faire découvrir la thématique de la blockchain et des Distributed Ledger Technologies au
-          grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique Nantaise
+          Notre association a pour objet de faire découvrir la thématique de la blockchain et des Distributed Ledger
+          Technologies au
+          grand public comme aux technophiles et de rassembler tous les acteurs intéressés pour créer une dynamique
+          Nantaise
           sur le sujet.
         </p>
         <p>
@@ -105,9 +106,11 @@
             </div>
             <hr>
             <p class="body">
-              Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois vulgarisées, parfois techniques
+              Durant ces sessions, nous parlons des DLTs et de leurs cas d'usage, avec des conférences parfois
+              vulgarisées, parfois techniques
               et souvent les deux à la fois !
-              <br/> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les innombrables possibilités
+              <br /> Nous organisons également des ateliers pour travailler et réfléchir ensemble sur les innombrables
+              possibilités
               qu'offrent les technologies décentralisées.
             </p>
           </div>
@@ -121,12 +124,14 @@
             </div>
             <hr>
             <p class="body">
-              Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
+              Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les
+              bons plans et les
               techniques de trading.
-              <br/> Nous avons également mis en place un
-              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener" class="transparent-link">portefeuille d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
-              <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
-              <br/>
+              <br /> Nous avons également mis en place un
+              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener" class="transparent-link">portefeuille
+                d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
+              <br />Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
+              <br />
               <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener">
                 <span class="fa-stack fa-2x wallet-icon" data-toggle="tooltip" title="Lien vers le portefeuille virtuel">
                   <i class="fas fa-circle fa-stack-2x"></i>
@@ -361,7 +366,7 @@
               <i class="fab fa-4x fa-slack text-primary mb-3 icons"></i>
               <h3 class="mb-3">
                 Notre channel
-                <br/>
+                <br />
                 <strong>Slack</strong>
               </h3>
             </a>
@@ -373,7 +378,7 @@
               <i class="fab fa-4x fa-twitter text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre flux
-                <br/>
+                <br />
                 <strong>Twitter</strong>
               </h3>
             </a>
@@ -385,7 +390,7 @@
               <i class="fab fa-4x fa-github text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Nos projets
-                <br/>
+                <br />
                 <strong>Github</strong>
               </h3>
             </a>
@@ -397,7 +402,7 @@
               <i class="fab fa-4x fa-meetup text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre page
-                <br/>
+                <br />
                 <strong>Meetup</strong>
               </h3>
             </a>
@@ -411,7 +416,7 @@
               <i class="fas fa-4x fa-envelope text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre email
-                <br/>
+                <br />
                 <strong>de contact</strong>
               </h3>
             </a>
@@ -430,23 +435,13 @@
     </div>
   </footer>
 
-  <!-- Boostrap -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-
   <!-- Custom scripts for this template -->
   <script src="js/main.js"></script>
   <script src="js/meetup.js"></script>
   <script src="https://api.meetup.com/2/events?group_urlname=Blockchain-Societe-Nantes&callback=callbackMeetup"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/combine/npm/particles.js@2.0.0/particles.min.js,npm/jquery@3.3.1/dist/jquery.min.js,npm/popper.js@1.14.4/dist/umd/popper.min.js,npm/bootstrap@4.1.3/dist/js/bootstrap.min.js,npm/scrollreveal@4.0.4/dist/scrollreveal.min.js,npm/jquery.easing@1.4.1/jquery.easing.min.js"></script>
 
   <script type="text/javascript">
     particlesJS.load('particles', './assets/particles.json', function () {
