--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="card">
           <img class="card-img-top rounded-circle" src="./img/team/kbi.jpg">
           <div class="card-body">
-            <p class="card-text">Kévin BIGER</p>
+            <p class="card-text">Kevin BIGER</p>
           </div>
         </div>
 
