--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 col-md-6 text-center">
+        <div class="col-lg-4 col-md-5 text-center">
           <div class="network-box mt-5 mx-auto">
             <a href="mailto:contact@blockchainsociete.org">
               <i class="fas fa-4x fa-envelope text-primary mb-3 sr-icons"></i>
@@ -417,7 +417,7 @@
             </a>
           </div>
         </div>
-        <div class="col-lg-6 col-md-6 text-center">
+        <div class="col-lg-4 col-md-5 text-center">
           <div class="network-box mt-5 mx-auto">
             <a href="https://www.facebook.com/groups/822513524759506/" target="_blank">
               <i class="fab fa-4x fa-facebook-f text-primary mb-3 sr-icons"></i>
@@ -425,6 +425,18 @@
                 Notre groupe
                 <br/>
                 <strong>Facebook</strong>
+              </h3>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-5 text-center">
+          <div class="network-box mt-5 mx-auto">
+            <a href="https://www.linkedin.com/company/blockchain-et-societe" target="_blank">
+              <i class="fab fa-4x fa-linkedin text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">
+                Notre page
+                <br/>
+                <strong>Linkedin</strong>
               </h3>
             </a>
           </div>
