feat:add Boris in the team section

--- a/index.html
+++ b/index.html
@@ -277,6 +277,13 @@
           </div>
         </div>
 
+        <div class="card">
+          <img class="card-img-top rounded-circle" src="./img/team/bjn.png">
+          <div class="card-body">
+            <p class="card-text">Boris JUGUIN</p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
